<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:background="@drawable/wave_background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">


    <TextView
            android:id="@+id/textView"
            android:text="@string/log_in"
            android:layout_width="92dp"
            android:layout_height="38dp"
            android:textSize="32sp"
            android:layout_marginTop="172dp"
            android:layout_marginStart="142dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            android:textStyle="bold|normal"
            app:layout_constraintVertical_bias="0.009" android:layout_alignParentTop="true"/>
    <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:textColorHighlight="@string/email_address"
            android:hint="@string/email_address_hint"
            android:textColorHint="#909090"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="246dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/background_for_login_bottoms"
            android:padding="7dp"
            android:textSize="12sp"
            android:paddingStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintVertical_bias="0.011"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,RtlSymmetry"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="46dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="437dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="47dp"/>

    <EditText
            android:id="@+id/password"
            android:textColorHighlight="@string/email_address"
            android:hint="@string/password_login"
            android:textColorHint="#909090"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="310dp"
            android:inputType="numberPassword"
            android:background="@drawable/background_for_login_bottoms"
            android:padding="7dp"
            android:textSize="12sp"
            android:paddingStart="18dp"
            app:passwordToggleEnabled="true"
            tools:ignore="Autofill,RtlSymmetry"
            android:layout_alignParentEnd="true" android:layout_marginEnd="44dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="373dp" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_marginStart="47dp"/>
    <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/blue"
            android:textStyle="bold|normal"
            android:clickable="true"
            android:onClick="onForgotPasswordClicked"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:focusable="true"
            tools:layout_editor_absoluteX="222dp"
            tools:ignore="MissingConstraints" android:minHeight="48dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="317dp" android:layout_alignParentEnd="true" android:layout_marginEnd="44dp"/>

    <Button
            android:text="@string/log_in_page"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#D9D9D9"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:id="@+id/button_login"
            android:background="@drawable/background_for_login_bottoms_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="213dp"
            app:layout_constraintHorizontal_bias="0.494"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="468dp" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"
            android:layout_marginEnd="41dp" android:layout_alignParentStart="true" android:layout_marginStart="50dp"/>
    <CheckBox
            android:text="@string/keep_me_signed_in"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:textSize="12sp"
            android:id="@+id/checkBox"
            android:buttonTint="#D9D9D9"
            android:backgroundTintMode="add"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.405"
            android:layout_marginBottom="300dp" android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" android:layout_marginEnd="60dp" android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"/>

    <TextView
            android:id="@+id/textViewLoginWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="563dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_alignParentEnd="true"
            android:layout_marginEnd="135dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="152dp" android:layout_alignParentStart="true"
            android:layout_marginStart="140dp" android:layout_alignParentTop="true"/>
    <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="613dp"
            app:layout_constraintTop_toBottomOf="@id/textViewLoginWith"
            app:layout_constraintHorizontal_bias="0.109"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_alignParentBottom="true"
            android:layout_marginBottom="99dp" android:layout_alignParentEnd="true" android:layout_marginEnd="245dp"
            android:layout_alignParentStart="true" android:layout_marginStart="40dp"
            android:layout_alignParentTop="true"/>
    <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold|normal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signUpLink"
            android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
            android:layout_marginEnd="166dp"/>
    <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="19dp"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSignUpClicked" android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" android:layout_marginEnd="107dp" android:minHeight="48dp"/>


</RelativeLayout>